# f1-digital-twin-monza

./: .gitignore  LICENSE  Makefile  README.md  app.py  dashboard.py  generate_plots.py  generate_results.py  main.py  pipeline.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: monza_2023.yaml  spa_2023.yaml
docs/: analysis.md
src/: __init__.py  config.py  export.py  ingest.py  resample.py  visualise.py
tests/: conftest.py  test_config.py  test_export.py  test_resample.py
